--- a/tex_v2/src/cv.tex
+++ b/tex_v2/src/cv.tex
@@ -15,11 +15,11 @@
 \tagline{Software developer | Golang}
 %\photo{2.5cm}{darwiin}
 \socialinfo{
-	\linkedin{christopheroger}
+	\linkedin{rafaelmoukhametdjanov}
 	\github{rmukhamet}\\
 	%\smartphone{+687 831 831}
-	\email{christophe.roger@mail.com}\\
-	\address{17 Rue de Bretagne, 98835 Dumbéa, Nouvelle-Calédonie}\\
+	\email{r-mukhamet@outlook.com}\\
+	\address{Naberejnie Chelny, 423800, Russia (UTC/GMT +3)}\\
 	%\infos{Né le 23 septembre 1982 (35 ans) à Nouméa, Nouvelle-Calédonie}
 }
 
@@ -38,11 +38,11 @@
 		{\thepage}
 
 	\input{section_headline_archi}
-	\input{section_competences}				% Section compétence
+	\input{section_skills}				% Section skills
 	\input{section_experience_short}		% Section expérience
-	\input{section_langues}					% Section langues
-	%\input{section_scolarite}				% Section scholarité
-	%\input{section_interets}				% Section intérêts
+	\input{section_languages}					% Section languages
+	\input{section_education}				% Section scholarité
+	%\input{section_interests}				% Section intérêts
 %	\input{section_projets}
 %	\input{section_references} 				% Section références
 
