--- a/tex_v2/src/section_experience_short.tex
+++ b/tex_v2/src/section_experience_short.tex
@@ -10,12 +10,12 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 
 %Section: Work Experience at the top
-\sectionTitle{Expériences Professionelles}{\faSuitcase}
+\sectionTitle{Experience}{\faSuitcase}
 %\renewcommand{\labelitemi}{$\bullet$}
 \begin{experiences}
   \experience
-    {Aujourd'hui}   {Architecte logiciel | Développeur/Concepteur Senior JEE}{EPI}{Nouvelle-Calédonie}
-    {Décembre 2015} {
+    {Present}   {Technology LLC| Développeur/Concepteur Senior JEE}{EPI}{Nouvelle-Calédonie}
+    {October 2019} {
                       \begin{itemize}
                         \item Applications hybrides : Conception et développement
                         \item Développements de micro services REST avec Spring Boot : Conception et développement
@@ -25,7 +25,7 @@
                         \item Evolutions et corrections des bugs du framework de développement interne  
                       \end{itemize}
                     }
-                    {Spring Boot,IntelliJ Idea,Ionic 3,Typescript,Firebase,Apache Tomcat,Eclipse,Maven,Jenkins,Nexus}
+                    {Golang,SQL,Ionic 3,Typescript,Firebase,Apache Tomcat,Eclipse,Maven,Jenkins,Nexus}
   \emptySeparator
   \experience
     {Novembre 2015} {Architecte logiciel | Développeur/Concepteur Senior JEE}{\link{http://www.cafat.nc}{CAFAT}}{Nouvelle-Calédonie}
