--- a/tex_v2/src/section_languages.tex
+++ b/tex_v2/src/section_languages.tex
@@ -11,16 +11,16 @@
 
 %Section: Languages
 \twocolumnsection
-{\sectionTitle{Langues}{\faLanguage}
+{\sectionTitle{Languages}{\faLanguage}
 \begin{skills}
-	\skill{Français}{5}
-	\skill{Anglais}{4}
+    \skill{Russian}{5}
+	\skill{English}{4}
 \end{skills}}
-{\sectionTitle{Forces}{\faPlus}
-\vspace{1em}
-\begin{itemize}
-	\item Passioné
-	\item Motivé                    
-    \item Autonome
-\end{itemize}
-}
+%{\sectionTitle{Forces}{\faPlus}
+%\vspace{1em}
+%\begin{itemize}
+%	\item Passioné
+%	\item Motivé                    
+%    \item Autonome
+%\end{itemize}
+%}
