--- a/tex_v2/src/section_languages.tex
+++ b/tex_v2/src/section_languages.tex
@@ -16,11 +16,11 @@
     \skill{Russian}{5}
 	\skill{English}{4}
 \end{skills}}
-%{\sectionTitle{Forces}{\faPlus}
-%\vspace{1em}
+{\sectionTitle{Forces}{\faPlus}
+\vspace{1em}
 %\begin{itemize}
 %	\item Passioné
 %	\item Motivé                    
 %    \item Autonome
 %\end{itemize}
-%}
+}
