fix skills clean ci

--- a/tex_v2/src/section_skills.tex
+++ b/tex_v2/src/section_skills.tex
@@ -13,10 +13,10 @@
 \sectionTitle{Skills}{\faTasks}
 
 	\begin{keywords}
-		\keywordsentry{Programming}{\textbf{Golang}. Typescript, Javascript}
-		\keywordsentry{Databases}{PostgreSQL, MongoDB, MySQL}
-		\keywordsentry{Technologies}{\textbf{REST API}, RegExp, \textbf{SQL}, GRPC}
-		\keywordsentry{Tools}{\textbf{Git}, textbf{Docker}, Ansible, SaltStack, Gitlab CI, Github Actions}
+		\keywordsentry{Programming}{\textbf{Golang}, Typescript, Javascript}
+		\keywordsentry{Databases}{PostgreSQL, MongoDB, MySQL, Redis}
+		\keywordsentry{Technologies}{\textbf{REST API}, \textbf{SQL}, RegExp, GRPC, AWS mTurk}
+		\keywordsentry{Tools}{\textbf{Git}, \textbf{Docker}, Ansible, SaltStack, Gitlab CI, Github Actions}
 		%\keywordsentry{Libraries}{\textbf{JBoss EAP}, \textbf{Apache Tomcat}, Websphere Application Server (\emph{WAS})}
 		\keywordsentry{OS}{Mac OS X, Ubuntu, Debian}
 	\end{keywords}
