--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -9,12 +9,39 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+
+%---------------------------------------------------------
+  \cventry
+    {Software Developer{\enskip\cdotp\enskip}golang} % Job title
+    {Acronis, Inc.} % Organization
+    {Sofia, Bulgaria} % Location
+    {May. 2021 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Developing integrations}
+        \item {golang, PostgreSQL}
+      \end{cvitems}
+    }
+    
+%---------------------------------------------------------
+  \cventry
+    {Software Developer{\enskip\cdotp\enskip}golang} % Job title
+    {Regemini, Inc.} % Organization
+    {California, USA} % Location
+    {May. 2020 - May. 2021} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Developing web scrapping services}
+        \item {golang, ELK, Kafka, Mongo}
+      \end{cvitems}
+    }
+
 %---------------------------------------------------------
   \cventry
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Technology, LLC.} % Organization
     {Naberejnie Chelny, Russia} % Location
-    {Oct. 2019 - Present} % Date(s)
+    {Oct. 2019 - May. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developing api testing tool.}
