--- a/src/cv/interests.tex
+++ b/src/cv/interests.tex
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {} % Role
-    {} % Title
-    {} % Location
-    {} % Date(s)
+   % {} % Role
+   % {} % Title
+   % {} % Location
+   % {} % Date(s)
     {
       \begin{cvitems} % Description(s)
         \item {Reading}
