--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -20,14 +20,14 @@
     {Linux, Docker, Git, Ansible, SaltStack, Gitlab CI, Github Actions} % Skills
 
 %---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Angular, TypeScript, RxJS, NGXS} % Skills
+%  \cvskill
+%    {Front-end} % Category
+%    {Hugo, Angular, TypeScript, RxJS, NGXS} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Golang, SQL, RegExp, awk, bash, R, LaTeX} % Skills
+    {Golang, SQL, RegExp, awk, bash} % Skills
 
 %---------------------------------------------------------
   \cvskill
