--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -15,10 +15,10 @@
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Acronis, Inc.} % Organization
     {Sofia, Bulgaria} % Location
-    {May. 2021 - present} % Date(s)
+    {May 2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing integrations}
+        \item {Developing integrations with third party services}
         \item {golang, PostgreSQL}
       \end{cvitems}
     }
@@ -28,10 +28,10 @@
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Regemini, Inc.} % Organization
     {California, USA} % Location
-    {May. 2020 - May. 2021} % Date(s)
+    {May 2020 - May 2021} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing web scrapping services}
+        \item {Developing web forum scrapping microservices}
         \item {golang, ELK, Kafka, Mongo}
       \end{cvitems}
     }
@@ -41,10 +41,10 @@
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Technology, LLC.} % Organization
     {Naberejnie Chelny, Russia} % Location
-    {Oct. 2019 - May. 2020} % Date(s)
+    {Oct 2019 - May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing api testing tool.}
+        \item {Developing api functional testing tool.}
         \item {golang, PostgreSQL, MSSQL, SOAP}
       \end{cvitems}
     }
@@ -52,12 +52,12 @@
 %---------------------------------------------------------
   \cventry
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
-    {Zirra.co Ltd} % Organization
+    {Zirra.co Ltd alternative alternative data finance analysing platform} % Organization
     {Tel Aviv, Israil (Remote)} % Location
-    {Apr. 2018 - Sep. 2019} % Date(s)
+    {Apr 2018 - Sep 2019} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Programming of data systems that extract information from many sources, then process, then normalize, and analyze the information that powers Zirra products.}
+        \item {Programming of data systems that extract information from many sources, then process, then normalize, and analyze the information that powers product.}
         \item {Adding new data sources, expanding existing data processing capabilities and integrating new models and analytics.}
         \item {Processing structured and unstructured data to produce trading signals and indicators.}
         \item {Increase data quality using AWS MTurk in order to increase data quality.}
@@ -70,7 +70,7 @@
     {Team Lead/Frontend Developer} % Job title
     {Realty Cloud - selling e-signed authority document about asset owners} % Organization
     {Naberejnie Chelny, Russia} % Location
-    {Dec. 2017 - May. 2018} % Date(s)
+    {Dec 2017 - May 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {SaltStack, gitlab CI, nomad, golang, typescript angular 6, PostgreSQL}
@@ -82,7 +82,7 @@
     {CTO} % Job title
     {TruckMove - transport management system} % Organization
     {Naberejnie Chelny, Russia} % Location
-    {2015 - Dec. 2017} % Date(s)
+    {2015 - Dec 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {SaltStack, gitlab CI, nomad, consul, golang, typescript angular 6, PostgreSQL, EGTS, Asterisk, microservices (go-micro), GPRC}
