--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -82,7 +82,7 @@
     {CTO} % Job title
     {TruckMove - transport management system} % Organization
     {Naberejnie Chelny, Russia} % Location
-    {2015 - Dec 2017} % Date(s)
+    {Apr 2015 - Dec 2017} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {SaltStack, gitlab CI, nomad, consul, golang, typescript angular 6, PostgreSQL, EGTS, Asterisk, microservices (go-micro), GPRC}
