--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -19,9 +19,9 @@
     {Linux, Docker, Git, Ansible, SaltStack, Gitlab CI, Github Actions} % Skills
 
 %---------------------------------------------------------
-  \cvskill
-    {Front-end} % Category
-    {Hugo, Angular, TypeScript, RxJS, NGXS} % Skills
+%  \cvskill
+%    {Front-end} % Category
+%    {Hugo, Angular, TypeScript, RxJS, NGXS} % Skills
 
 %---------------------------------------------------------
   \cvskill
