--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -14,7 +14,7 @@
   \cventry
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Acronis, Inc.} % Organization
-    {Sofia, Bulgaria} % Location
+    {Sofia, Bulgaria (Remote)} % Location
     {May 2021 - present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
@@ -26,7 +26,7 @@
 %---------------------------------------------------------
   \cventry
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
-    {Regemini, Inc.} % Organization
+    {Regemini, Inc. (Remote)} % Organization
     {California, USA} % Location
     {May 2020 - May 2021} % Date(s)
     {
@@ -44,7 +44,7 @@
     {Oct 2019 - May 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing api functional testing tool.}
+        \item {Developing functional testing tool for API}
         \item {golang, PostgreSQL, MSSQL, SOAP}
       \end{cvitems}
     }
