--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -10,8 +10,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Back-end} % Category
-    {Golang, SQL, REST API} % Skills
+    {Programming} % Category
+    {Golang, SQL, RegExp} % Skills
 
 %---------------------------------------------------------
   \cvskill
@@ -25,13 +25,8 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Golang, SQL, RegExp, awk, bash} % Skills
-
-%---------------------------------------------------------
-  \cvskill
     {Databases} % Category
-    {PostgreSQL, MongoDB, Redis} % Skills
+    {PostgreSQL, MongoDB, ELK, Redis,} % Skills
 
 %---------------------------------------------------------
   \cvskill
