--- a/src/cv.tex
+++ b/src/cv.tex
@@ -54,7 +54,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Rafael}{Mukhametdzhanov}
-\position{Software Developer{\enskip\cdotp\enskip}golang}
+\position{Software Developer{\enskip\cdotp\enskip}golang 5+ years}
 \address{Naberejnie Chelny, 423800, Russia (UTC/GMT +3)}
 
 %\mobile{(+7) 927-427-78-88}
