--- a/src/cv.tex
+++ b/src/cv.tex
@@ -99,7 +99,7 @@
 \input{cv/education.tex}
 \input{cv/experience.tex}
 \input{cv/interests.tex}
-\input{cv/other.tex}
+%\input{cv/other.tex}
 %\input{cv/extracurricular.tex}
 %\input{cv/honors.tex}
 %\input{cv/presentation.tex}
