--- a/src/cv/skills.tex
+++ b/src/cv/skills.tex
@@ -11,12 +11,16 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Golang, SQL, RegExp} % Skills
+    {Golang(5y+), SQL, REST, gRPC} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Tools} % Category
-    {Linux, Docker, Git, Ansible, SaltStack, Gitlab CI, Github Actions} % Skills
+    {Linux, Docker, Git, k8s, postman, nginx, lua} % Skills
+    
+  \cvskill
+    {Tech} % Category
+    {Git flow, Onion arch, microservices, swagger, unit tests} % Skills
 
 %---------------------------------------------------------
 %  \cvskill
@@ -26,12 +30,12 @@
 %---------------------------------------------------------
   \cvskill
     {Databases} % Category
-    {PostgreSQL, MongoDB, ELK, Redis,} % Skills
+    {PostgreSQL, MongoDB, ELK, Redis} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Russian - native, English - intermediate } % Skills
+    {Russian - native, English - B1+ } % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
