--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -15,11 +15,12 @@
     {Software Developer{\enskip\cdotp\enskip}golang} % Job title
     {Acronis, Inc.} % Organization
     {Sofia, Bulgaria (Remote)} % Location
-    {May 2021 - present} % Date(s)
+    {May 2021 - October 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developing integrations with third party services}
-        \item {golang, PostgreSQL}
+        \item {Core team of new distributed application: sync system, provision mocked app subsystem etc... (fsm, access checks,endpoints, batch processing)}
+        \item {Developing integrations with third party services till october 2022}
+        \item {golang, PostgreSQL, microservices, k8s, REST, private cloud related API}
       \end{cvitems}
     }
     
