--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -18,7 +18,7 @@
     {May 2021 - October 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Core team of new distributed application: sync system, provision mocked app subsystem etc... (fsm, access checks,endpoints, batch processing)}
+        \item {Core team of new distributed application: sync system, provision mocked app subsystem etc... (fsm, access checks,endpoints, batch processing) from scratch to stable production}
         \item {Developing integrations with third party services till october 2022}
         \item {golang, PostgreSQL, microservices, k8s, REST, private cloud related API}
       \end{cvitems}
