--- a/src/cv/interests.tex
+++ b/src/cv/interests.tex
@@ -18,7 +18,7 @@
     {
       \begin{cvitems} % Description(s)
         \item {Reading}
-        \item {Machine Learning}
+        \item {Family}
         \item {Statistics}
       \end{cvitems}
     }
