--- a/src/cv/experience.tex
+++ b/src/cv/experience.tex
@@ -9,6 +9,18 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+%---------------------------------------------------------
+ \cventry
+    {Software Developer{\enskip\cdotp\enskip}golang} % Job title
+    {Wildberries, Inc.} % Organization
+    {Russia (Remote)} % Location
+    {April 2024 - Present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Financial team of improving refund services }
+        \item {golang, PostgreSQL, microservices, k8s, REST}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
