--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -565,6 +565,7 @@
 % Usage: \cvsection{<section-title>}
 \newcommand{\cvsection}[1]{%
   \vspace{\acvSectionTopSkip}
+  \vspace{-3mm} 
   \sectionstyle{#1}
   \phantomsection
   \color{gray}\vhrulefill{0.9pt}
